2008-xx-xx - release x.x
	- Bugfix: Properly emulate B-R/B-W (fixes Pirates!)
	- Bugfix: Close buffers on I (fixes Drazpaint)
	- reworked source configuration system
	- M-R returns (random) data
	- New commands E-R, E-W: Read/write reserved area of EEPROM
	- Added U0> for device address changes

2008-01-13 - release 0.5.1
	- Bugfix: Really disable JTAG - fixes very slow access on some
          hardware variants

2008-01-12 - release 0.5
	- Bugfix: Recode ~/pi in both directions
	- Bugfix: Fastloaders now work on LarsP-style hardware too
	- Disk change key support
	- Full JiffyDos support
	- EEPROM configuration storage
	- Full support for D64, read/write/sector access

2007-12-25 - release 0.4.2
	- Bugfix: LarsP-style hardware actually works now

2007-12-19 - release 0.4.1
	- Bugfix: Creating a new file within an M2I image wrote
                  a terminating zero byte into the M2I directory entry
	- Bugfix: Another guesstimated delay in iec_putc
	- AVR Studio project file updated

2007-12-07 - release 0.4
	- Extended DOS commands:
	  - Enable/Disable JiffyDOS
	  - Set oscillator calibration
	- Full support for M2I images

2007-11-29 - release 0.3
	- disable interrupts during iec_getc
	- add full CRC checking in SD code with retries on errors
	- software fastloader support: Turbodisk protocol
	- card change detection
	- better file name parsing
	- directory loading supports wildcards
	- support for file overwrite (@)
	- option to display hidden files in directory
	- filename matching for open
	- filename matching for scratch

2007-11-02 - release 0.2.1
	- bugfix: Don't cause repeated entries at the end of the directory
	- bugfix: Don't repeast the last block of a saved file (1:256 chance)
	- bugfix: Increase all timeouts in the card initialisation
	- Recode 0xff in filenames to ~, both characters map to the pi
	  symbol on the C64

2007-11-01 - release 0.2
	- conditional compilation via make command line for chip type
	  and IO pin assignment (Shadowwolf/LarsP)