@@ -44,6 +44,8 @@ static EEMEM struct {
   uint8_t checksum;
   uint8_t osccal;
   uint8_t jiffyflag;
+  uint8_t address;
+  uint8_t hardaddress;
 } storedconfig;
 
 /**
@@ -69,6 +71,8 @@ void read_configuration(void) {
   /* Read data from EEPROM */
   OSCCAL = eeprom_read_byte(&storedconfig.osccal);
   iecflags.jiffy_enabled = eeprom_read_byte(&storedconfig.jiffyflag);
+  if (eeprom_read_byte(&storedconfig.hardaddress) == DEVICE_SELECT)
+    device_address = eeprom_read_byte(&storedconfig.address);
 
   /* Paranoia: Set EEPROM address register to the dummy entry */
   EEAR = 0;
@@ -86,6 +90,8 @@ void write_configuration(void) {
   /* Write configuration to EEPROM */
   eeprom_write_byte(&storedconfig.osccal, OSCCAL);
   eeprom_write_byte(&storedconfig.jiffyflag, iecflags.jiffy_enabled);
+  eeprom_write_byte(&storedconfig.address, device_address);
+  eeprom_write_byte(&storedconfig.hardaddress, DEVICE_SELECT);
 
   /* Calculate checksum over EEPROM contents */
   checksum = 0;
