@@ -5,6 +5,7 @@
 	- M-R returns (random) data
 	- New commands E-R, E-W: Read/write reserved area of EEPROM
 	- Added U0> for device address changes
+	- device address is stored in the EEPROM
 
 2008-01-13 - release 0.5.1
 	- Bugfix: Really disable JTAG - fixes very slow access on some
